force-app/main/default/objects/Shift_Template__c/Shift_Template__c.object-meta.xml
<CustomObject>
    <label>Shift Template</label>
    <nameField>
        <label>Shift Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shift Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>