force-app/main/default/objects/Shift_Template__c/fields/Break_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Break_Minutes__c</fullName>
    <label>Break Minutes</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>