force-app/main/default/objects/Shift_Template__c/fields/Compliance_Required__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Required__c</fullName>
    <label>Compliance Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>