force-app/main/default/objects/Shift_Template__c/fields/Employer_Account__c.field-meta.xml
<CustomField>
    <fullName>Employer_Account__c</fullName>
    <label>Employer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shift Templates</relationshipLabel>
    <relationshipName>ShiftTemplates</relationshipName>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>