force-app/main/default/objects/Shift_Template__c/fields/Max_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Max_Headcount__c</fullName>
    <label>Max Headcount</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>