force-app/main/default/objects/Shift_Template__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <label>Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            <value><fullName>Daily</fullName><default>false</default><label>Daily</label></value>
            <value><fullName>Weekly</fullName><default>false</default><label>Weekly</label></value>
            <value><fullName>Biweekly</fullName><default>false</default><label>Biweekly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>