force-app/main/default/objects/Shift_Template__c/fields/Required_Skill__c.field-meta.xml
<CustomField>
    <fullName>Required_Skill__c</fullName>
    <label>Required Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Nurse</fullName><default>true</default><label>Nurse</label></value>
            <value><fullName>Physician</fullName><default>false</default><label>Physician</label></value>
            <value><fullName>Medical Assistant</fullName><default>false</default><label>Medical Assistant</label></value>
            <value><fullName>Billing Staff</fullName><default>false</default><label>Billing Staff</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>