force-app/main/default/objects/Shift_Template__c/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <label>Shift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Day</fullName><default>true</default><label>Day</label></value>
            <value><fullName>Evening</fullName><default>false</default><label>Evening</label></value>
            <value><fullName>Night</fullName><default>false</default><label>Night</label></value>
            <value><fullName>On-Call</fullName><default>false</default><label>On-Call</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>