force-app/main/default/objects/Shift_Template__c/fields/Template_Status__c.field-meta.xml
<CustomField>
    <fullName>Template_Status__c</fullName>
    <label>Template Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Archived</fullName><default>false</default><label>Archived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>